--- a/src/app/dbz/components/add-character/add-character.component.html
+++ b/src/app/dbz/components/add-character/add-character.component.html
@@ -1,11 +1,22 @@
 <h4>Agregar personaje</h4>
-<form class="row">
 
-    <input type="text" class="form-control mb-2"  placeholder="Nombre del personaje">
+<form class="row" 
+    (submit)="emitCharacter()">
 
-    <input type="number" class="form-control mb-2"  placeholder="Poder">
+    <input type="text" 
+    [(ngModel)]="character.name"
+    name="name"
+    class="form-control mb-2" 
+    placeholder="Nombre del personaje">
+
+    <input type="number" 
+    [(ngModel)]="character.power"
+    name="power"
+    class="form-control mb-2" 
+    placeholder="Poder">
 
     <button type="submit" class="btn btn-primary">
         Agrear
     </button>
+    <pre>{{character | json}}</pre>
 </form>
