--- a/src/app/dbz/components/add-character/add-character.component.html
+++ b/src/app/dbz/components/add-character/add-character.component.html
@@ -16,7 +16,7 @@
     placeholder="Poder">
 
     <button type="submit" class="btn btn-primary">
-        Agrear
+        Agregar
     </button>
     <pre>{{character | json}}</pre>
 </form>
