--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -8,25 +8,26 @@
         let isEven = even
         let isOdd = odd
         " 
-    class="list-group-item" 
+    class="list-group-item d-flex justify-content-between align-items-center" 
     [ngClass]="{
         'list-group-item-dark': isLast,
         'list-group-item-primary': isEven
         }">
-        <span class="text-primary "> {{index + 1}}. </span>
+        <div>
+            <span class="text-primary "> {{index + 1}}. </span>
+    
+            <span> {{ character.name}} - </span>
+    
+            <strong>Power: </strong>
+    
+            <span>{{character.power}}</span>
 
-        <span> {{ character.name}} - </span>
+        </div>
 
-        <strong>Power: </strong>
-
-        <span>{{character.power}}</span>
-
-        <span>Es el primero: {{ isFirst}} </span>
-
-        <span>Es el úlitmo: {{ isLast}} </span>
-
-        <span>Es par: {{ isEven}} </span>
-
-        <span>Es impar; {{isOdd}}</span>
+        <button type="button" 
+        (click)="onDeleteCharacter(character.id!)"
+        class="btn btn-danger">X</button>
     </li>
+
+
 </ul>
